# DocumentXacatoon

./: .gitignore  README.md  bun.lockb  package.json
Client/Hi/: bun.lockb  package.json
Client/Hi/src/: app.css
Client/Hi/src/routes/: back.module.scss  index.module.scss  index.tsx  login.module.scss  login.tsx  user.tsx
Client/Learn/: bun.lockb  package.json
Client/Learn/src/: SbrosStyle.css  index.css  index.jsx
Client/Learn/src-tauri/: tauri.conf.json
Client/Learn/src/pages/: Pics.jsx  Pics2.css  Rentgeni.css  User.css  User.jsx  dnd.jsx  index.module.scss  mrt.jsx  rentgeni.jsx
Client/Learn/src/zaprosi/: GetImage.js  Upload.js  fetchh_get.js  fetchh_post.js
Server/: server.py
Server/API/: Cargo.toml  bin.json
Server/API bun/: README.md  bun.lockb  index.js  package.json
Server/API/src/: connection_server.rs  converter.rs  images.rs  load_tile.rs  main.rs  test.rs  upload.rs  users.rs
Server/DB/: database_manager.py  server.py
Server/PyServer/: sever.py
